layout + code + gradle issues FIXED BUT APP CRASHES???

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
 
 
-    <string name="app_name">525 Crescendo Pit Scouting App</string>
+    <string name="app_name">525 Reefscape Pit Scouting App</string>
     <string name="title_activity_data__collection__page_1">Data_Collection_Page_1</string>
     <string name="to_begin_data_collection_enter_team_match_number_and_click_start">Please Enter Team Number, Match Number and your Initials to Begin</string>
     <string name="match_number">Match Number:</string>
